--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,7 @@
-
+<p>&nbsp;<img src="img/logo.png" alt="Логотип" /></p>
+<div>&nbsp;</div>
+<p>HTML 4 ME</p>
+<p>Ли Виталий Анатольевич</p>
+<header><hr />
+<p><a href="#home">Пункт меню 1</a><a href="index2.html">Пункт меню 2</a></p>
+</header><hr />
