--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,22 @@
-<p>&nbsp;<img src="img/logo.png" alt="Логотип" /></p>
-<div>&nbsp;</div>
-<p>HTML 4 ME</p>
-<p>Ли Виталий Анатольевич</p>
-<header><hr />
-<p><a href="#home">Пункт меню 1</a><a href="index2.html">Пункт меню 2</a></p>
-</header><hr />
+<!DOCTYPE html>
+
+<html>
+    <head>
+    
+        <meta charset="utf-8">
+        <title>HTML4ME</title>
+        <link rel="stylesheet" href="style/styles.css">
+        
+    </head>
+
+    <body>
+    	<div class="logo">
+    		<img src="content/face.svg" alt="Logo">
+    	</div>
+        <div class="hat">
+		
+        </div>
+        <p>HTML4ME</p>
+    </body>
+
+</html>
